# cppkart

./: CMakeLists.txt  rename_bullet_libs.ps1
src/: main.cpp
src/core/gl/: Camera.h  Geometry.cpp  Texture.cpp  Texture.h
src/core/loaders/: ChunkedMapLoader.hpp  ObjModel.cpp
src/engine/: SimulationWorld.cpp
src/engine/objects/: SimulationObject.cpp  SimulationObject.hpp
src/engine/physics/: PhysicsWorldSingleton.h
src/engine/physics/managers/: PhysicsChunkManager.hpp
src/engine/rendering/: GLRenderer.hpp  GameRenderer.cpp  ObjectRenderer.cpp
src/game/: DemoGame.hpp  GameWindow.hpp  JXGame.cpp  JXGame.hpp
src/game/scenes/: GameScene.cpp  GameScene.hpp
src/game/shader/: default.frag
src/game/state/: GameInput.hpp
src/jx_engine/core/: Scene.hpp
src/jx_engine/io/: GameInput.hpp
src/jx_engine/logs/: Logger.hpp
src/jx_engine/physics/: BulletDebugDrawer.cpp  PhysicsWorldSingleton.h  StaticTriangleMeshPhysics.hpp  VehiclePhysics.hpp
src/jx_engine/physics/manager/: PhysicsChunkManager.hpp
src/jx_engine/render/gl/: Camera.h
src/ressources/DE_Aztec/: DE_AZTEC_MAP.mtl
